# pacselect

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  release.sh
.github/workflows/: release.yml
src/: aur.rs  classify.rs  config.rs  config_upgrade.rs  depcheck.rs  environment.rs  filters.rs  install.rs  log.rs  main.rs  updates.rs
